# mcli

./: Cargo.toml  Cross.toml  README.md  create-dockerfile.py  mcli.1
.github/workflows/: build.yml  docker.yml
dockerfiles/aarch64-unknown-linux-gnu/: Dockerfile
dockerfiles/aarch64-unknown-linux-musl/: Dockerfile
dockerfiles/arm-unknown-linux-gnueabi/: Dockerfile
dockerfiles/arm-unknown-linux-gnueabihf/: Dockerfile
dockerfiles/armv7-unknown-linux-gnueabihf/: Dockerfile
dockerfiles/i686-unknown-linux-gnu/: Dockerfile
dockerfiles/i686-unknown-linux-musl/: Dockerfile
dockerfiles/powerpc64le-unknown-linux-gnu/: Dockerfile
dockerfiles/s390x-unknown-linux-gnu/: Dockerfile
src/: build.rs  main.rs
